[package]
name = "youtuberg-wasm"
version = "0.1.3"
authors = ["ryoha000 <the7uya@gmail.com>"]
edition = "2018"
repository = "https://github.com/ryoha000/youtuberg-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
